--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,3 +7,7 @@ easy_admin_bundle:
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+    
+# app/config/routing.yml
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
