--- a/web/.htaccess
+++ b/web/.htaccess
@@ -7,8 +7,8 @@ DirectoryIndex app.php
 
 # By default, Apache does not evaluate symbolic links if you did not enable this
 # feature in your server configuration. Uncomment the following line if you
-# install assets as symlinks or if you experience problems related to symlinks
-# when compiling LESS/Sass/CoffeScript assets.
+# install asset as symlinks or if you experience problems related to symlinks
+# when compiling LESS/Sass/CoffeScript asset.
 # Options FollowSymlinks
 
 # Disabling MultiViews prevents unwanted negotiation, e.g. "/app" should not resolve
