--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,6 +72,7 @@ easy_admin:
     entities:
         # change the following to the namespaces of your own entities
         - AppBundle\Entity\Product
+        - AppBundle\Entity\User
 
 # app/config/config.yml
 fos_user:
