--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,7 @@ easy_admin:
     entities:
         # change the following to the namespaces of your own entities
         - AppBundle\Entity\User
-        - AppBundle\Entity\Cpu
+        - AppBundle\Entity\Product
         - AppBundle\Entity\Media
         - AppBundle\Entity\Provider
 
