--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,6 +17,13 @@ fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
 memory:
-  defaults: { _controller: AppBundle:Product:memory }
+  defaults: { _controller: AppBundle:Default:memory }
   path:      /memory
 
+cpu:
+  defaults: { _controller: AppBundle:Default:cpu }
+  path:      /cpu
+
+motherboard:
+  defaults: { _controller: AppBundle:Default:MotherBoard }
+  path:      /motherboards
