--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,7 +13,7 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
-        # disables authentication for asset and the profiler, adapt it according to your needs
+        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
